--- a/AdminIncludes/module_configuration.html
+++ b/AdminIncludes/module_configuration.html
@@ -39,6 +39,18 @@
                             {include file="payzen/form-field-template.html" field_name="platform_url"}
                             {include file="payzen/form-field-template.html" field_name="mode"}
                             {include file="payzen/form-field-template.html" field_name="allowed_ip_list"}
+
+                            <div class="form-group">
+                                <label class="control-label">
+                                    {intl l="Return URL in the back-office"}
+                                </label>
+
+                                <p class="form-control-static">{url path='/payzen/callback'}</p>
+
+                                <span class="help-block">
+                                    {intl l="Copy this URL in the 'Return URL of the shop in production mode' and 'Shop's return URL in test mode' fields in the back-office"}
+                                </span>
+                            </div>
                         </div>
 
                         <div class="col-md-4">
@@ -50,6 +62,8 @@
 
                             {include file="payzen/form-field-template.html" field_name="minimum_amount"}
                             {include file="payzen/form-field-template.html" field_name="maximum_amount"}
+                            {include file="payzen/form-field-template.html" field_name="three_ds_minimum_order_amount"}
+
                         </div>
 
                         <div class="col-md-4">
