Remove unwanted modification of email template

--- a/I18n/email-templates/fr.html
+++ b/I18n/email-templates/fr.html
@@ -44,13 +44,13 @@
     <div id="entete">
         <h1 id="logotexte">{config key="store_name"}</h1>
 
-        <h2 id="info">Confirmation du prélèvement SEPA de votre commande</h2>
+        <h2 id="info">Confirmation du paiement de votre commande</h2>
 
         <h3 id="commande">N&deg; {$order_ref}</h3>
     </div>
 
     <p id="liencompte">
-        Votre facture est maintenant disponible dans la rubrique 'Mon compte' sur
+        Le suivi de votre commande est disponible dans la rubrique mon compte sur
         <a href="{config key="url_site"}">{config key="url_site"}</a>
     </p>
 
